--- a/report/paper.tex
+++ b/report/paper.tex
@@ -72,6 +72,7 @@ In this section contains the description of each file.
     \item \texttt{scripts/models\_implemented.py}: contains all the model classes (e.g. NNModel1Loss, CNNModel2Loss).
     \item \texttt{main.py}: contains examples of each models, in order to call and train a model.
 \end{itemize}
+Files \texttt{scripts/cross\_validation\_report.py} and \texttt{BoxPlot\_generator.ipynb} are made for report purpose.
 
 \section{Linear Models}
 \label{sec:linearmodel}
@@ -104,11 +105,14 @@ Linear Regression has a strange behavior due to the fact that it has not have a 
 \section{Neural Network Models}
 \label{sec:nnmodel}
 We have implemented two models for the neural network, the first one with 1 loss and the second one with 2 losses, as showed in Fig. \ref{fig:nn1} and Fig. \ref{fig:nn2}. Both models use the same feature extractors but they differs for the classifier. The first one has a boolean classifier that returns 1 if the first image is smaller then the second one. The second model, it has also a digit classifier that returns the corresponding digit for both the handwritten images (we have used an hot encoding to give a target to each node).
-%check se img1 < img2 o se era l'inverso!
-For these two models the images inputs are passed as 2D images.  Since the feature extractor processes both images together (it does not consider the two images independently), we can use a digit classifier with $20$ nodes as output ($10$ nodes for each images; i.e. from $0$ to $9$ as value of digit). We were expected to have a better result using 2 losses; but since it is a model with just linear layers we could have improved the computation considering both the images independently; we have then decided to try with a convolutional neural network, since \textit{conv3d} allow to automatically process both the images independently. We have observed that two losses could improve the accuracy if the model is more complex, otherwise it would affect negatively the accuracy (as in our case).
+For these two models the images inputs are passed as 2D images.  Since the feature extractor processes both images together (it does not consider the two images independently), we can use a digit classifier with $20$ nodes as output ($10$ nodes for each images; i.e. from $0$ to $9$ as value of digit). 
+% NN con 2 losses sembra meglio nel train!!
+% We were expected to have a better result using 2 losses; but since it is a model with just linear layers we could have improved the computation considering both the images independently; we have then decided to try with a convolutional neural network, since \textit{conv3d} allow to automatically process both the images independently. We have observed that two losses could improve the accuracy if the model is more complex, otherwise it would affect negatively the accuracy (as in our case).
 %TODO: aggiungere 2 img
 
 % Aggiungere un preprocessing step (flatten nel caso delle reti basate sui layer lineari e niente nel caso della rete conv3d)
+
+%UPDATE: 2 losses work better with NN but not with CNN!!!!!!!!!
 
 \section{Convolutional Neural Network Models}
 \label{sec:cnnmodel}
@@ -123,7 +127,19 @@ Since linear models are really sensible to the weights setting
 we have decided to use a unique seed to compare the models.
 In Table \ref{table:params} we have %something.
 
-% #TODO: (REPORT) for 1 to 10 of seed and to plotbox per far vedere outliers --> pensare al codice
+
+In the following plotboxs, it is possible to see the accuracies for each models (using cross validation). We can notice that the accuracy vary a lot in simple models since they highly depend from weights initialization.
+
+\begin{figure}[!h]
+    \centering
+    \includegraphics[width=0.5\textwidth]{boxplot.png}
+    \caption{Plotbox that show the accuracy using cross validation. Star symbols represent the average values.}
+    \label{fig:train_acc_box}
+\end{figure}
+
+
+% Table accuracy, cross validation (numpy - mean +- std), test value
+
 
 \begin{table}
 \centering
@@ -153,7 +169,8 @@ In Table \ref{table:params} we have %something.
 \section{Conclusion}
 \label{sec:conclusion}
 As future improvement we would like to implement the cross validation.
-%TODO: add
+%TODO: add something
+Then CNN is the best %blabla
 % %%%%%%%%%%%%%%%%%%%%%
 
 
